global update: fix all service urls
